Share working Share with specific user working, download permission fixed Email validation added for sharing

--- a/preview.html
+++ b/preview.html
@@ -186,7 +186,7 @@
             } else {
                 tbody.innerHTML =
                     "<tr><td colspan = '10' style ='text-align:center'>No files found!</td></tr>";
-                window.location = "login.html";
+                //window.location = "login.html";
             }
         },
     };
